--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "firebase": "^5.9.4",
     "react": "16.8.3",
     "react-native": "0.59.4",
     "react-native-fbsdk": "^0.8.0"
