--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
   },
   "dependencies": {
     "firebase": "^5.9.4",
+    "firebaseui": "^3.5.2",
+    "native-base": "^2.12.1",
     "react": "16.8.3",
     "react-native": "0.59.4",
-    "react-native-fbsdk": "^0.8.0"
+    "react-native-fbsdk": "^0.8.0",
+    "react-native-gesture-handler": "^1.2.1",
+    "react-native-vector-icons": "^6.4.2",
+    "react-navigation": "^3.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
